# linear-regression-a-zillion-ways

./: .gitignore  pyproject.toml  readme.md
linear_models/estimators/: __init__.py  negative_log_likelihood.py  ols.py  ols_analytical.py  ols_optimizer.py
linear_models/fake_data/: __init__.py  fake_data.py
linear_models/loss_functions/: __init__.py  negative_log_likelihood.py  ordinary_least_squares.py
linear_models/optimizers/: newton_first_order.py  newton_second_order.py
notebooks/: OLS - analytical.ipynb  Regressions.ipynb
tests/: test_linear_models.py
