[tool.poetry]
name = "linear_models"
version = "0.1.0"
description = ""
authors = ["William C Grisaitis <wgrisaitis@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
jupyter = "^1.0.0"
jupyter-contrib-nbextensions = "^0.5.1"
numpy = "^1.18.1"
pandas = "^0.25.3"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
flake8 = "^3.7.9"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
